--- a/source/css/module/home.scss
+++ b/source/css/module/home.scss
@@ -67,6 +67,15 @@
 
 	@media #{$viewport-mobile} {
 
+		.quotePanel{
+			.quotePanel--content{
+				p{
+					padding-left: 10px;
+					padding-right: 10px;
+				}
+			}
+		}
+
 	}
 }
 
