--- a/source/css/_settings.typography.scss
+++ b/source/css/_settings.typography.scss
@@ -88,8 +88,12 @@ p{
 
 
 @media #{$viewport-mobile} {
+	h1{
+		font-size: 30px;
+	}
+
 	h2{
-		font-size: 20px;
+		font-size: 20px !important;
 	}
 
 
