--- a/source/css/module/gallery.scss
+++ b/source/css/module/gallery.scss
@@ -19,13 +19,20 @@
 			display: inline-block;
 			height: 100%;
 			width:  100%;
+			background-color: black;
 		}
 
 
+		img{
+			width: 100%;
+			height: 100%;
 
-		&:hoverShadow{
-			background: red !important;
+
+			&:hover{
+				opacity: 0.4;
+			}
 		}
+
 
 		.mosaic--container__top{
 			display: block;
@@ -33,8 +40,8 @@
 			padding-bottom: 20px;
 
 			.mosaic--top__left{
-				background: url('../img/mosaic-img1.jpg') no-repeat;
-				background-size: cover;
+				// background: url('../img/mosaic-img1.jpg') no-repeat;
+				// background-size: cover;
 				width: 32%;
 				margin-right: 20px;
 			}
@@ -46,8 +53,8 @@
 				width: 64%;
 
 				.mosaic--top__topMiddle{
-					background: url('../img/mosaic-img2.jpg') no-repeat;
-					background-size: cover;
+					// background: url('../img/mosaic-img2.jpg') no-repeat;
+					// background-size: cover;
 					display: inline-block;
 					height: 45%;
 					width: 48%;
@@ -56,8 +63,8 @@
 				}
 
 				.mosaic--top__topRight{
-					background: url('../img/mosaic-img3.jpg') no-repeat;
-					background-size: cover;
+					// background: url('../img/mosaic-img3.jpg') no-repeat;
+					// background-size: cover;
 					height: 45%;
 					display: inline-block;
 					width: 49%;
@@ -66,8 +73,8 @@
 
 
 				.mosaic--top__bottomRight{
-					background: url('../img/mosaic-img4.jpg') no-repeat;
-					background-size: cover;
+					// background: url('../img/mosaic-img4.jpg') no-repeat;
+					// background-size: cover;
 					display: block;
 					height: 50%;
 					width: 100%;
@@ -82,20 +89,20 @@
 			margin-bottom: 20px;
 
 			.mosaic--middle__left{
-				background: url('../img/mosaic-img5.jpg') no-repeat;
-				background-size: cover;
+				// background: url('../img/mosaic-img5.jpg') no-repeat;
+				// background-size: cover;
 				width: 32%;
 				margin-right: 20px;
 			}
 			.mosaic--middle__middle{
-				background: url('../img/mosaic-img6.jpg') no-repeat;
-				background-size: cover;
+				// background: url('../img/mosaic-img6.jpg') no-repeat;
+				// background-size: cover;
 				width: 32%;
 				margin-right: 20px;
 			}
 			.mosaic--middle__right{
-				background: url('../img/mosaic-img7.jpg') no-repeat;
-				background-size: cover;
+				// background: url('../img/mosaic-img7.jpg') no-repeat;
+				// background-size: cover;
 				width: 32%;
 			}
 		}
@@ -105,15 +112,15 @@
 			display: block;
 
 			.mosaic--bottom__left{
-				background: url('../img/mosaic-img8.jpg') no-repeat;
-				background-size: cover;
+				// background: url('../img/mosaic-img8.jpg') no-repeat;
+				// background-size: cover;
 				width: 49%;
 				margin-right: 20px;
 			}
 
 			.mosaic--bottom__right{
-				background: url('../img/mosaic-img9.jpg') no-repeat;
-				background-size: cover;
+				// background: url('../img/mosaic-img9.jpg') no-repeat;
+				// background-size: cover;
 				width: 49%;
 
 			}
