--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1021,94 +1021,47 @@ h1, h2, h3, h4, p, li, a {
  * @js:       ./source/js/module/gallery/gallery.js
  * @html:     ./source/js/module/gallery/gallery.html
  */
-.gallery .mosaic--container {
-  margin: 0 auto;
-  margin-bottom: 75px;
-  width: 94%;
-  max-width: 1290px;
-  height: 1380px; }
-  .gallery .mosaic--container .mosaic--element {
-    display: inline-block;
+.gallery .photos li .mosiac--element {
+  margin-left: 30px;
+  height: 200px;
+  width: 200px;
+  background-color: black;
+  background-image: url("../img/magnifyingGlass.png");
+  background-repeat: no-repeat;
+  background-size: 58px 49px;
+  background-position: center center;
+  display: inline-block; }
+  .gallery .photos li .mosiac--element img {
     height: 100%;
-    width: 100%;
-    background-color: black; }
-  .gallery .mosaic--container img {
-    width: 100%;
-    height: 100%; }
-    .gallery .mosaic--container img:hover {
-      opacity: 0.4; }
-  .gallery .mosaic--container .mosaic--container__top {
-    display: block;
-    height: 600px;
-    padding-bottom: 20px; }
-    .gallery .mosaic--container .mosaic--container__top .mosaic--top__left {
-      width: 32%;
-      margin-right: 20px; }
-    .gallery .mosaic--container .mosaic--container__top .mosaic--block {
-      display: inline-block;
-      height: 100%;
-      vertical-align: top;
-      width: 64%; }
-      .gallery .mosaic--container .mosaic--container__top .mosaic--block .mosaic--top__topMiddle {
-        display: inline-block;
-        height: 45%;
-        width: 48%;
-        margin-bottom: 20px;
-        margin-right: 20px; }
-      .gallery .mosaic--container .mosaic--container__top .mosaic--block .mosaic--top__topRight {
-        height: 45%;
-        display: inline-block;
-        width: 49%;
-        margin-bottom: 20px; }
-      .gallery .mosaic--container .mosaic--container__top .mosaic--block .mosaic--top__bottomRight {
-        display: block;
-        height: 50%;
-        width: 100%;
-        float: right; }
-  .gallery .mosaic--container .mosaic--container__middle {
-    height: 420px;
-    display: block;
-    margin-bottom: 20px; }
-    .gallery .mosaic--container .mosaic--container__middle .mosaic--middle__left {
-      width: 32%;
-      margin-right: 20px; }
-    .gallery .mosaic--container .mosaic--container__middle .mosaic--middle__middle {
-      width: 32%;
-      margin-right: 20px; }
-    .gallery .mosaic--container .mosaic--container__middle .mosaic--middle__right {
-      width: 32%; }
-  .gallery .mosaic--container .mosaic--container__bottom {
-    height: 320px;
-    display: block; }
-    .gallery .mosaic--container .mosaic--container__bottom .mosaic--bottom__left {
-      width: 49%;
-      margin-right: 20px; }
-    .gallery .mosaic--container .mosaic--container__bottom .mosaic--bottom__right {
-      width: 49%; }
+    width: 100%; }
+    .gallery .photos li .mosiac--element img:hover {
+      opacity: 0.5; }
 
-@media screen and (max-width: 767px) {
-  .gallery .mosaic--container {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0; }
-    .gallery .mosaic--container .mosaic--container__top, .gallery .mosaic--container .mosaic--container__middle {
-      height: auto;
-      margin: 0;
-      padding: 0; }
-      .gallery .mosaic--container .mosaic--container__top .mosaic--block, .gallery .mosaic--container .mosaic--container__middle .mosaic--block {
-        display: block;
-        width: 100%;
-        margin: 0;
-        padding: 0; }
-    .gallery .mosaic--container .mobileView {
-      width: 90% !important;
-      margin: 0 auto;
-      margin-top: 5px;
-      margin-bottom: 5px;
-      height: 200px !important;
-      display: block !important;
-      float: none !important; } }
+.gallery .black_overlay {
+  display: none;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  z-index: 1001;
+  -moz-opacity: 0.8;
+  opacity: .80;
+  filter: alpha(opacity=80); }
+
+.gallery .white_content {
+  display: none;
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  width: 50%;
+  height: 50%;
+  padding: 16px;
+  border: 16px solid orange;
+  background-color: white;
+  z-index: 1002;
+  overflow: auto; }
 
 /**
  * @module:   home
