--- a/source/css/module/gallery.scss
+++ b/source/css/module/gallery.scss
@@ -6,158 +6,215 @@
 
 
 @include module("gallery") {
+	.photos{
+		li{
 
-	.mosaic--container{
-		// border: solid 1px black;
-		margin: 0 auto;
-		margin-bottom: 75px;
-		width: 94%;
-		max-width: 1290px;
-		height: 1380px;
-
-		.mosaic--element{
-			display: inline-block;
-			height: 100%;
-			width:  100%;
-			background-color: black;
-		}
-
-
-		img{
-			width: 100%;
-			height: 100%;
-
-
-			&:hover{
-				opacity: 0.4;
-			}
-		}
-
-
-		.mosaic--container__top{
-			display: block;
-			height: 600px;
-			padding-bottom: 20px;
-
-			.mosaic--top__left{
-				// background: url('../img/mosaic-img1.jpg') no-repeat;
-				// background-size: cover;
-				width: 32%;
-				margin-right: 20px;
-			}
-
-			.mosaic--block{
+			.mosiac--element{
+				margin-left:30px;
+				height: 200px;
+				width: 200px;
+				background-color: black;
+				background-image: url('../img/magnifyingGlass.png');
+				background-repeat: no-repeat;
+				background-size: 58px 49px;
+				background-position: center center;
 				display: inline-block;
-				height: 100%;
-				vertical-align: top;
-				width: 64%;
 
-				.mosaic--top__topMiddle{
-					// background: url('../img/mosaic-img2.jpg') no-repeat;
-					// background-size: cover;
-					display: inline-block;
-					height: 45%;
-					width: 48%;
-					margin-bottom: 20px;
-					margin-right:20px;
-				}
-
-				.mosaic--top__topRight{
-					// background: url('../img/mosaic-img3.jpg') no-repeat;
-					// background-size: cover;
-					height: 45%;
-					display: inline-block;
-					width: 49%;
-					margin-bottom: 20px;
-				}
-
-
-				.mosaic--top__bottomRight{
-					// background: url('../img/mosaic-img4.jpg') no-repeat;
-					// background-size: cover;
-					display: block;
-					height: 50%;
+				img{
+					height: 100%;
 					width: 100%;
-					float: right;
+					&:hover{
+						opacity: 0.5;
+					}
 				}
-			}
-		}
-
-		.mosaic--container__middle{
-			height: 420px;
-			display: block;
-			margin-bottom: 20px;
-
-			.mosaic--middle__left{
-				// background: url('../img/mosaic-img5.jpg') no-repeat;
-				// background-size: cover;
-				width: 32%;
-				margin-right: 20px;
-			}
-			.mosaic--middle__middle{
-				// background: url('../img/mosaic-img6.jpg') no-repeat;
-				// background-size: cover;
-				width: 32%;
-				margin-right: 20px;
-			}
-			.mosaic--middle__right{
-				// background: url('../img/mosaic-img7.jpg') no-repeat;
-				// background-size: cover;
-				width: 32%;
-			}
-		}
-
-		.mosaic--container__bottom{
-			height: 320px;
-			display: block;
-
-			.mosaic--bottom__left{
-				// background: url('../img/mosaic-img8.jpg') no-repeat;
-				// background-size: cover;
-				width: 49%;
-				margin-right: 20px;
-			}
-
-			.mosaic--bottom__right{
-				// background: url('../img/mosaic-img9.jpg') no-repeat;
-				// background-size: cover;
-				width: 49%;
-
 			}
 		}
 	}
 
-	@media #{$viewport-mobile} {
-		.mosaic--container{
-			width: 100%;
-			height: 100%;
-			margin: 0;
-			padding:0;
 
-			.mosaic--container__top, .mosaic--container__middle{
-				height: auto;
-				margin: 0;
-				padding:0;
-
-				.mosaic--block{
-					display: block;
-					width: 100%;
-
-					margin: 0;
-					padding:0;
-				}
-			}
-
-
-			.mobileView{
-				width: 90% !important;
-				margin: 0 auto;
-				margin-top: 5px;
-				margin-bottom: 5px;
-				height: 200px !important;
-				display: block !important;
-				float: none !important;
-			}
-		}
+	.black_overlay{
+	    display: none;
+	    position: absolute;
+	    top: 0%;
+	    left: 0%;
+	    width: 100%;
+	    height: 100%;
+	    background-color: black;
+	    z-index:1001;
+	    -moz-opacity: 0.8;
+	    opacity:.80;
+	    filter: alpha(opacity=80);
 	}
+
+	.white_content {
+	    display: none;
+	    position: absolute;
+	    top: 25%;
+	    left: 25%;
+	    width: 50%;
+	    height: 50%;
+	    padding: 16px;
+	    border: 16px solid orange;
+	    background-color: white;
+	    z-index:1002;
+	    overflow: auto;
+	}
+
+
+
+
+	// @media #{$viewport-mobile} {
+	// 	.mosaic--container{
+	// 		width: 100%;
+	// 		height: 100%;
+	// 		margin: 0;
+	// 		padding:0;
+
+	// 		.mosaic--container__top, .mosaic--container__middle{
+	// 			height: auto;
+	// 			margin: 0;
+	// 			padding:0;
+
+	// 			.mosaic--block{
+	// 				display: block;
+	// 				width: 100%;
+
+	// 				margin: 0;
+	// 				padding:0;
+	// 			}
+	// 		}
+
+
+	// 		.mobileView{
+	// 			width: 90% !important;
+	// 			margin: 0 auto;
+	// 			margin-top: 5px;
+	// 			margin-bottom: 5px;
+	// 			height: 200px !important;
+	// 			display: block !important;
+	// 			float: none !important;
+	// 		}
+	// 	}
+	// }
 }
+
+
+// .mosaic--container{
+	// 	// border: solid 1px black;
+	// 	margin: 0 auto;
+	// 	margin-bottom: 75px;
+	// 	width: 94%;
+	// 	max-width: 1290px;
+	// 	height: 1380px;
+
+	// 	.mosaic--element{
+	// 		display: inline-block;
+	// 		height: 100%;
+	// 		width:  100%;
+	// 		background-color: black;
+
+	// 	}
+
+
+		// img{
+		// 	width: 100%;
+		// 	height: 100%;
+
+
+		// 	&:hover{
+		// 		opacity: 0.4;
+		// 	}
+		// }
+
+
+		// .mosaic--container__top{
+		// 	display: block;
+		// 	height: 600px;
+		// 	padding-bottom: 20px;
+
+		// 	.mosaic--top__left{
+		// 		// background: url('../img/mosaic-img1.jpg') no-repeat;
+		// 		// background-size: cover;
+		// 		width: 32%;
+		// 		margin-right: 20px;
+		// 	}
+
+		// 	.mosaic--block{
+		// 		display: inline-block;
+		// 		height: 100%;
+		// 		vertical-align: top;
+		// 		width: 64%;
+
+		// 		.mosaic--top__topMiddle{
+		// 			// background: url('../img/mosaic-img2.jpg') no-repeat;
+		// 			// background-size: cover;
+		// 			display: inline-block;
+		// 			height: 45%;
+		// 			width: 48%;
+		// 			margin-bottom: 20px;
+		// 			margin-right:20px;
+		// 		}
+
+		// 		.mosaic--top__topRight{
+		// 			// background: url('../img/mosaic-img3.jpg') no-repeat;
+		// 			// background-size: cover;
+		// 			height: 45%;
+		// 			display: inline-block;
+		// 			width: 49%;
+		// 			margin-bottom: 20px;
+		// 		}
+
+
+		// 		.mosaic--top__bottomRight{
+		// 			// background: url('../img/mosaic-img4.jpg') no-repeat;
+		// 			// background-size: cover;
+		// 			display: block;
+		// 			height: 50%;
+		// 			width: 100%;
+		// 			float: right;
+		// 		}
+		// 	}
+		// }
+
+		// .mosaic--container__middle{
+		// 	height: 420px;
+		// 	display: block;
+		// 	margin-bottom: 20px;
+
+		// 	.mosaic--middle__left{
+		// 		// background: url('../img/mosaic-img5.jpg') no-repeat;
+		// 		// background-size: cover;
+		// 		width: 32%;
+		// 		margin-right: 20px;
+		// 	}
+		// 	.mosaic--middle__middle{
+		// 		// background: url('../img/mosaic-img6.jpg') no-repeat;
+		// 		// background-size: cover;
+		// 		width: 32%;
+		// 		margin-right: 20px;
+		// 	}
+		// 	.mosaic--middle__right{
+		// 		// background: url('../img/mosaic-img7.jpg') no-repeat;
+		// 		// background-size: cover;
+		// 		width: 32%;
+		// 	}
+		// }
+
+		// .mosaic--container__bottom{
+		// 	height: 320px;
+		// 	display: block;
+
+		// 	.mosaic--bottom__left{
+		// 		// background: url('../img/mosaic-img8.jpg') no-repeat;
+		// 		// background-size: cover;
+		// 		width: 49%;
+		// 		margin-right: 20px;
+		// 	}
+
+		// 	.mosaic--bottom__right{
+		// 		// background: url('../img/mosaic-img9.jpg') no-repeat;
+		// 		// background-size: cover;
+		// 		width: 49%;
+
+		// 	}
+		// }
