--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1182,6 +1182,11 @@ h1, h2, h3, h4, p, li, a {
  * @js:       ./source/js/module/localArea/localArea.js
  * @html:     ./source/js/module/localArea/localArea.html
  */
+.localArea .map--panel #map {
+  width: 100%;
+  height: 400px;
+  background-color: #CCC; }
+
 .localArea .nearestVillage--panel .house {
   background: url("../img/house.png") no-repeat;
   background-size: 100%;
