--- a/source/css/module/localArea.scss
+++ b/source/css/module/localArea.scss
@@ -6,6 +6,14 @@
 
 
 @include module("localArea") {
+	.map--panel{
+		#map{
+			width: 100%;
+        	height: 400px;
+			background-color: #CCC;
+		}
+	}
+
 	.nearestVillage--panel{
 		.house{
 			background: url('../img/house.png') no-repeat;
