--- a/public/css/app.css
+++ b/public/css/app.css
@@ -34,6 +34,8 @@
  * Read more avaiable properties:
  * https://github.com/inuitcss/base.headings/blob/master/_base.headings.scss
  */
+@import url(../../node_modules/photoswipe/dist/photoswipe.css);
+@import url(../../node_modules/photoswipe/dist/default-skin/default-skin.css);
 @font-face {
   font-family: "JosefinSans-SemiBold";
   src: url("../fonts/JosefinSans-SemiBold.eot");
