--- a/source/css/module/nav.scss
+++ b/source/css/module/nav.scss
@@ -83,9 +83,6 @@
 		height: auto;
 		display: block;
 
-		&.activeBurger{
-			display: block;
-		}
 
 		.burger{
 			display: block;
@@ -108,6 +105,11 @@
 			width: 90%;
 			margin: 0 auto;
 			margin-left: 35px;
+			display: none;
+
+			&.activeBurger{
+				display: block;
+			}
 
 			li{
 				color: $mainGrey;
