--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1031,38 +1031,32 @@ h1, h2, h3, h4, p, li, a {
           text-align: center;
           padding-bottom: 25px;
           font-size: 20px; }
-        .contact .contactPanel .contactPanel--container .contactPanel--container__right input {
-          padding: 22px 10px 20px; } }
+        .contact .contactPanel .contactPanel--container .contactPanel--container__right input.submit {
+          width: 100%;
+          padding-top: 3px; } }
 
 /**
  * @module:   gallery
  * @js:       ./source/js/module/gallery/gallery.js
  * @html:     ./source/js/module/gallery/gallery.html
  */
-.gallery .photos li .mosiac--element {
-  margin-left: 30px;
-  height: 200px;
-  width: 200px;
-  background-color: black;
-  background-image: url("../img/magnifyingGlass.png");
-  background-repeat: no-repeat;
-  background-size: 35px 27px;
-  background-position: 47% center;
+.gallery .photos li {
   display: inline-block; }
-  .gallery .photos li .mosiac--element img {
-    height: 100%;
-    width: 100%; }
-    .gallery .photos li .mosiac--element img:hover {
-      opacity: 0.5; }
-
-.gallery .carouselBox {
-  width: 90%;
-  font-size: 14px;
-  position: relative;
-  margin: 1em;
-  border: solid 1px #8dc2d5;
-  box-shadow: 2px 2px 10px #ccc;
-  overflow: hidden; }
+  .gallery .photos li .mosiac--element {
+    margin-left: 30px;
+    height: 200px;
+    width: 200px;
+    background-color: black;
+    background-image: url("../img/magnifyingGlass.png");
+    background-repeat: no-repeat;
+    background-size: 35px 27px;
+    background-position: 47% center;
+    display: inline-block; }
+    .gallery .photos li .mosiac--element img {
+      height: 100%;
+      width: 100%; }
+      .gallery .photos li .mosiac--element img:hover {
+        opacity: 0.5; }
 
 .gallery .active {
   height: 130px; }
@@ -1203,6 +1197,11 @@ h1, h2, h3, h4, p, li, a {
     margin-left: -25px;
     height: 20px;
     width: 40px; }
+  @media screen and (max-width: 767px) {
+    .homescreen .heading--container h1 {
+      width: 240px;
+      margin-left: -120px;
+      font-size: 2rem; } }
 
 /**
  * @module:   info
@@ -1424,6 +1423,11 @@ h1, h2, h3, h4, p, li, a {
           padding: 15px 10px;
           text-align: left;
           border-bottom: solid 1px #e1e1e1; }
+          .nav .navbar--container li.nav-underline:after {
+            display: none; }
+          .nav .navbar--container li.active {
+            border-bottom: 1px solid #e1e1e1;
+            font-weight: bold; }
       .nav.fixed {
         height: auto; } }
 
