--- a/source/css/module/contact.scss
+++ b/source/css/module/contact.scss
@@ -130,8 +130,9 @@
 						font-size: 20px;
 					}
 
-					input{
-						padding: 22px 10px 20px;
+					input.submit{
+						width: 100%;
+						padding-top: 3px;
 					}
 				}
   			}
