--- a/source/css/module/gallery.scss
+++ b/source/css/module/gallery.scss
@@ -9,40 +9,43 @@
 
 @include module("gallery") {
 
+	.photos{
+		li{
+			display: inline-block;
 
-		.photos{
-			li{
-				.mosiac--element{
-					margin-left:30px;
-					height: 200px;
-					width: 200px;
-					background-color: black;
-					background-image: url('../img/magnifyingGlass.png');
-					background-repeat: no-repeat;
-					background-size: 35px 27px;
-					background-position: 47% center;
-					display: inline-block;
+			.mosiac--element{
+				margin-left:30px;
+				height: 200px;
+				width: 200px;
+				background-color: black;
+				background-image: url('../img/magnifyingGlass.png');
+				background-repeat: no-repeat;
+				background-size: 35px 27px;
+				background-position: 47% center;
+				display: inline-block;
 
-					img{
-						height: 100%;
-						width: 100%;
-						&:hover{
-							opacity: 0.5;
-						}
+				img{
+					height: 100%;
+					width: 100%;
+					&:hover{
+						opacity: 0.5;
 					}
 				}
 			}
 		}
-	.carouselBox{
-		width: 90%;
-		font-size: 14px;
-		position: relative;
-		margin: 1em;
-		border: solid 1px $mainBlue;
-		box-shadow: 2px 2px 10px #ccc;
-		overflow: hidden;
-
 	}
+
+
+	// .carouselBox{
+	// 	width: 90%;
+	// 	font-size: 14px;
+	// 	position: relative;
+	// 	margin: 1em;
+	// 	border: solid 1px $mainBlue;
+	// 	box-shadow: 2px 2px 10px #ccc;
+	// 	overflow: hidden;
+
+	// }
 
 
 	// .photos{
