--- a/source/css/module/nav.scss
+++ b/source/css/module/nav.scss
@@ -120,9 +120,16 @@
 				text-align: left;
 				border-bottom: solid 1px $mainGrey;
 
+				&.nav-underline{
+					&:after{
+						display: none;
+					}
+				}
+
 				&.active{
 					border-bottom: 1px solid $mainGrey;
-					background-color: $mainGrey;
+					font-weight: bold;
+
 				}
 			}
 		}
