--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1040,8 +1040,28 @@ h1, h2, h3, h4, p, li, a {
  * @js:       ./source/js/module/gallery/gallery.js
  * @html:     ./source/js/module/gallery/gallery.html
  */
+.gallery .photos.background {
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  display: block;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  z-index: 10; }
+
 .gallery .photos li {
   display: inline-block; }
+  .gallery .photos li.activeImage {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    z-index: 1002; }
+    .gallery .photos li.activeImage .mosiac--element {
+      height: 80%;
+      width: auto; }
+      .gallery .photos li.activeImage .mosiac--element img:hover {
+        opacity: 1; }
   .gallery .photos li .mosiac--element {
     margin-left: 30px;
     height: 200px;
@@ -1057,60 +1077,6 @@ h1, h2, h3, h4, p, li, a {
       width: 100%; }
       .gallery .photos li .mosiac--element img:hover {
         opacity: 0.5; }
-
-.gallery .active {
-  height: 130px; }
-
-.gallery .active li {
-  position: absolute;
-  top: 200px; }
-
-.gallery .active li.current {
-  top: 30px; }
-
-.gallery .active .buttons {
-  padding: 5px;
-  background: #eee;
-  text-align: center;
-  z-index: 10;
-  position: relative; }
-
-.gallery .carouselBox button {
-  border: none;
-  display: none; }
-
-.gallery .active button {
-  display: inline-block; }
-
-.gallery .offscreen {
-  position: absolute;
-  left: -2000px; }
-
-.gallery .black_overlay {
-  display: none;
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  z-index: 1001;
-  -moz-opacity: 0.8;
-  opacity: .80;
-  filter: alpha(opacity=80); }
-
-.gallery .white_content {
-  display: none;
-  position: absolute;
-  top: 25%;
-  left: 25%;
-  width: 50%;
-  height: 50%;
-  padding: 16px;
-  border: 16px solid orange;
-  background-color: white;
-  z-index: 1002;
-  overflow: auto; }
 
 /**
  * @module:   home
