--- a/source/css/module/gallery.scss
+++ b/source/css/module/gallery.scss
@@ -10,8 +10,37 @@
 @include module("gallery") {
 
 	.photos{
+		&.background{
+	    	background-color: rgba(0,0,0,0.8);
+			position: fixed;
+			display: block;
+	    	top: 0%;
+	    	left: 0%;
+	    	width: 100%;
+	    	height: 100%;
+	    	z-index:10;
+		}
+
 		li{
 			display: inline-block;
+
+			&.activeImage{
+				width: 100%;
+				height: 100%;
+				text-align: center;
+				z-index: 1002;
+
+				.mosiac--element{
+					height: 80%;
+					width: auto;
+
+					img{
+						&:hover{
+							opacity: 1;
+						}
+					}
+				}
+			}
 
 			.mosiac--element{
 				margin-left:30px;
@@ -32,98 +61,12 @@
 					}
 				}
 			}
+
+
 		}
 	}
 
 
-	// .carouselBox{
-	// 	width: 90%;
-	// 	font-size: 14px;
-	// 	position: relative;
-	// 	margin: 1em;
-	// 	border: solid 1px $mainBlue;
-	// 	box-shadow: 2px 2px 10px #ccc;
-	// 	overflow: hidden;
-
-	// }
-
-
-	// .photos{
-	// 	margin: 0;
-	// 	padding: 0;
-	// }
-
-	// li{
-	// 	font-size: 100px;
-	// 	width:100%;
-	// 	list-style: none;
-	// 	text-align: center;
-	// 	line-height: normal;
-	// }
-
-	.active {
-	  height: 130px;
-	}
-
-	.active li {
-	  position: absolute;
-	  top: 200px;
-	}
-
-	.active li.current {
-	  top: 30px;
-	}
-
-	.active .buttons{
-		padding: 5px;
-		background: #eee;
-		text-align: center;
-		z-index: 10;
-		position: relative;
-	}
-
-	.carouselBox button{
-		border: none;
-		display: none;
-	}
-	.active button{
-		display: inline-block;
-	}
-
-	.offscreen{
-		position: absolute;
-		left: -2000px;
-	}
-
-
-
-	.black_overlay{
-	    display: none;
-	    position: absolute;
-	    top: 0%;
-	    left: 0%;
-	    width: 100%;
-	    height: 100%;
-	    background-color: black;
-	    z-index:1001;
-	    -moz-opacity: 0.8;
-	    opacity:.80;
-	    filter: alpha(opacity=80);
-	}
-
-	.white_content {
-	    display: none;
-	    position: absolute;
-	    top: 25%;
-	    left: 25%;
-	    width: 50%;
-	    height: 50%;
-	    padding: 16px;
-	    border: 16px solid orange;
-	    background-color: white;
-	    z-index:1002;
-	    overflow: auto;
-	}
 
 
 
