--- a/public/css/app.css
+++ b/public/css/app.css
@@ -34,8 +34,6 @@
  * Read more avaiable properties:
  * https://github.com/inuitcss/base.headings/blob/master/_base.headings.scss
  */
-@import url(../../node_modules/photoswipe/dist/photoswipe.css);
-@import url(../../node_modules/photoswipe/dist/default-skin/default-skin.css);
 @font-face {
   font-family: "JosefinSans-SemiBold";
   src: url("../fonts/JosefinSans-SemiBold.eot");
@@ -1040,43 +1038,59 @@ h1, h2, h3, h4, p, li, a {
  * @js:       ./source/js/module/gallery/gallery.js
  * @html:     ./source/js/module/gallery/gallery.html
  */
-.gallery .photos.background {
-  background-color: rgba(0, 0, 0, 0.8);
-  position: fixed;
-  display: block;
-  top: 0%;
-  left: 0%;
-  width: 100%;
-  height: 100%;
-  z-index: 10; }
-
-.gallery .photos li {
-  display: inline-block; }
-  .gallery .photos li.activeImage {
+.gallery .photos {
+  width: 80%;
+  max-width: 1000px;
+  margin: 0 auto; }
+  .gallery .photos.background {
+    background-color: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    display: table;
+    top: 0%;
+    left: 0%;
     width: 100%;
     height: 100%;
-    text-align: center;
-    z-index: 1002; }
-    .gallery .photos li.activeImage .mosiac--element {
-      height: 80%;
-      width: auto; }
-      .gallery .photos li.activeImage .mosiac--element img:hover {
-        opacity: 1; }
-  .gallery .photos li .mosiac--element {
-    margin-left: 30px;
-    height: 200px;
-    width: 200px;
-    background-color: black;
-    background-image: url("../img/magnifyingGlass.png");
-    background-repeat: no-repeat;
-    background-size: 35px 27px;
-    background-position: 47% center;
+    z-index: 10;
+    max-width: none; }
+  .gallery .photos .noCross {
+    display: none; }
+  .gallery .photos .cross {
+    display: block;
+    position: absolute;
+    right: 30px;
+    top: 10px;
+    font-size: 40px;
+    color: #ffffff; }
+  .gallery .photos li {
     display: inline-block; }
-    .gallery .photos li .mosiac--element img {
+    .gallery .photos li.activeImage {
+      margin-top: 10%;
+      width: 100%;
       height: 100%;
-      width: 100%; }
-      .gallery .photos li .mosiac--element img:hover {
-        opacity: 0.5; }
+      text-align: center;
+      z-index: 1002;
+      display: table-cell;
+      vertical-align: middle; }
+      .gallery .photos li.activeImage .mosiac--element {
+        height: 80%;
+        width: auto; }
+        .gallery .photos li.activeImage .mosiac--element img:hover {
+          opacity: 1; }
+    .gallery .photos li .mosiac--element {
+      margin-left: 30px;
+      height: 200px;
+      width: 200px;
+      background-color: black;
+      background-image: url("../img/magnifyingGlass.png");
+      background-repeat: no-repeat;
+      background-size: 35px 27px;
+      background-position: 47% center;
+      display: inline-block; }
+      .gallery .photos li .mosiac--element img {
+        height: 100%;
+        width: 100%; }
+        .gallery .photos li .mosiac--element img:hover {
+          opacity: 0.5; }
 
 /**
  * @module:   home
@@ -1351,7 +1365,7 @@ h1, h2, h3, h4, p, li, a {
     top: 0;
     height: 100px;
     z-index: 1; }
-  @media screen and (min-width: 768px) and (max-device-width: 1120px) {
+  @media screen and (max-width: 1200px) {
     .nav .navbar--container li {
       font-size: 15px;
       min-width: 100px; } }
