--- a/source/css/module/gallery.scss
+++ b/source/css/module/gallery.scss
@@ -4,31 +4,50 @@
  * @html:     ./source/js/module/gallery/gallery.html
  */
 
-@import "photoswipe/dist/photoswipe.css";
-@import "photoswipe/dist/default-skin/default-skin.css";
-
 @include module("gallery") {
 
 	.photos{
+		width: 80%;
+		max-width: 1000px;
+		margin: 0 auto;
+
 		&.background{
 	    	background-color: rgba(0,0,0,0.8);
 			position: fixed;
-			display: block;
+			display: table;
 	    	top: 0%;
 	    	left: 0%;
 	    	width: 100%;
 	    	height: 100%;
 	    	z-index:10;
+	    	max-width: none;
+
+		}
+
+		.noCross{
+			display: none;
+
+		}
+		.cross{
+			display: block;
+			position: absolute;
+			right: 30px;
+			top: 10px;
+			font-size: 40px;
+			color: $white;
 		}
 
 		li{
 			display: inline-block;
 
 			&.activeImage{
+				margin-top: 10%;
 				width: 100%;
 				height: 100%;
 				text-align: center;
 				z-index: 1002;
+				display: table-cell;
+				vertical-align: middle;
 
 				.mosiac--element{
 					height: 80%;
