--- a/source/css/module/nav.scss
+++ b/source/css/module/nav.scss
@@ -63,17 +63,16 @@
 		z-index: 1;
 	}
 
-
-
-	@media #{$viewport-tablet} {
-
+	@media screen and (max-width: 1200px){
 		.navbar--container{
 			li{
 				font-size: 15px;
 				min-width: 100px;
 			}
+
 		}
 	}
+
 
 	@media #{$viewport-mobile}{
 		background-color: $mainBlue;
