--- a/source/css/_settings.mediaQuerries.scss
+++ b/source/css/_settings.mediaQuerries.scss
@@ -1,8 +1,9 @@
 $viewport-wide-screen: 'screen and (min-width: 1650px)';
 
+$viewport-tablet: 'screen and (min-width: 768px) and (max-width: 1120px)';
+
 $viewport-mobile: 'screen and (max-width: 767px)';
 
-$viewport-tablet: 'screen and (min-width: 768px) and (max-device-width: 1120px)';
 
 
 
