--- a/source/css/module/localArea.scss
+++ b/source/css/module/localArea.scss
@@ -6,6 +6,16 @@
 
 
 @include module("localArea") {
+	.imageContainer{
+		.leftImage{
+			background-image: url('../img/left-info-img.jpg');
+		}
+
+		.rightImage{
+			background-image: url('../img/right-info-img.jpg');
+		}
+	}
+
 	.map--panel{
 		#map{
 			width: 100%;
@@ -119,6 +129,18 @@
 	  			}
 	  		}
 	  	}
+	}
+
+	@media #{$viewport-tablet} {
+		.nearestVillage--panel{
+			ul{
+				padding: 0 100px;
+				li{
+					width: 46%;
+					padding: 20px;
+				}
+			}
+		}
 	}
 
 	@media #{$viewport-mobile} {
