--- a/source/css/module/localArea.scss
+++ b/source/css/module/localArea.scss
@@ -27,6 +27,7 @@
 	.nearestVillage--panel{
 		padding-top: 70px;
 
+
 		.house{
 			background: url('../img/house.png') no-repeat;
 			background-size: 100%;
@@ -45,6 +46,7 @@
 			box-shadow: none;
 			padding: 0 120px;
 			margin: 0 auto;
+			text-align: center;
 			margin-bottom: 75px;
 
 			li{
