got all images working for local area and a bit of the styling in.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1305,23 +1305,33 @@ h1, h2, h3, h4, p, li, a {
         display: inline-block;
         width: 40%;
         vertical-align: top;
-        padding-right: 65px; }
+        padding-right: 20px; }
+        .localArea .nearestVillage--info .tab-pane .content--main .content--main__writingTop p {
+          padding-bottom: 20px; }
       .localArea .nearestVillage--info .tab-pane .content--main .content--main__img {
-        height: auto;
-        width: 200px;
+        height: 250px;
+        width: 59%;
         display: inline-block; }
         .localArea .nearestVillage--info .tab-pane .content--main .content--main__img.arles {
-          background: url("../img/img--village__arles.jpg") 100% no-repeat; }
+          background: url("../img/img--village__arles.jpg") no-repeat;
+          background-size: contain; }
         .localArea .nearestVillage--info .tab-pane .content--main .content--main__img.lesBaux {
-          background: url("../img/img--village__lesBaux.jpg") 100% no-repeat; }
+          background: url("../img/img--village__lesBaux.jpg") no-repeat;
+          background-size: contain; }
         .localArea .nearestVillage--info .tab-pane .content--main .content--main__img.stRem {
-          background: url("../img/img--village__stRemy.jpg") 100% no-repeat; }
-        .localArea .nearestVillage--info .tab-pane .content--main .content--main__img.marsielle {
-          background: url("../img/img--village__marseille.jpg") 100% no-repeat; }
+          background: url("../img/img--village__stRemy.jpg") no-repeat;
+          background-size: contain; }
+        .localArea .nearestVillage--info .tab-pane .content--main .content--main__img.marseille {
+          background: url("../img/img--village__marseille.jpg") no-repeat;
+          background-size: contain; }
         .localArea .nearestVillage--info .tab-pane .content--main .content--main__img.avignon {
-          background: url("../img/img--village__avignon.jpg") 100% no-repeat; }
+          background: url("../img/img--village__avignon.jpg") no-repeat;
+          background-size: contain; }
         .localArea .nearestVillage--info .tab-pane .content--main .content--main__img.aix {
-          background: url("../img/img--village__aix.jpg") 100% no-repeat; }
+          background: url("../img/img--village__aix.jpg") no-repeat;
+          background-size: contain; }
+      .localArea .nearestVillage--info .tab-pane .content--main .content--main__writingBottom p {
+        padding-bottom: 20px; }
     .localArea .nearestVillage--info .tab-pane .content--second {
       width: 80%;
       margin: 0 auto; }
